2002-01-22  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	PR other/5450
	* config/i386/sysv4.h (CPP_SPEC): Define, and add CPU preprocessor flags.

2001-12-11  Richard Henderson  <rth@redhat.com>

	* expmed.c (expand_divmod): Ignore sdiv_pow2_cheap for modes in
	which there is no divide expander.

2002-01-21  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* config/rs6000/t-ppccomm (CRTSTUFF_T_CFLAGS_S): Re-add -fPIC.

2002-01-21  Zack Weinberg  <zack@codesourcery.com>

	PR target/5410
	* config.gcc (i?86-*-netbsdelf*): New stanza.
	* config/i386/netbsd-elf.h: New file (backport from mainline).

2002-01-21  Neil Booth  <neil@daikokuya.demon.co.uk>
	
	PR preprocessor/3571
	* tradcpp.c (handle_directive): Skip non-vertical space.

2002-01-18  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
        * doc/install.texi (hppa*-hp-hpux11): Clarify that GCC 2.95.x cannot
        be used for bootstrapping GCC 3.0.  Clarify that --enable-threads
	does not work.

2002-01-17  David Edelsohn  <edelsohn@gnu.org>

	* doc/install.texi (*-ibm-aix*): Update assembler and exception
	handling information.
	* doc/gcc.texi (Interoperation): Add libstdc++ information
	for AIX.
	(Misunderstandings): Add template instantiation and static template
	member information for AIX.

2002-01-15  Jason Merrill  <jason@redhat.com>

	* c-common.def (FILE_STMT): New code.
	* c-common.c (statement_code_p): It's a statement.
	* c-common.h (stmt_tree_s): Add x_last_filename.
	(FILE_STMT_FILENAME_NODE, FILE_STMT_FILENAME): New macros.
	(last_expr_filename): New macro.
	* c-semantics.c (begin_stmt_tree): Initialize it.
	(add_stmt): If the filename changed, also insert a
	FILE_STMT.
	(expand_stmt): Handle seeing one.

2002-01-13  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/install.texi (Binaries): Make link to ftp.writtenword.com
	more generic.

2002-01-02  David Edelsohn  <edelsohn@gnu.org>

	* gcc.c (init_gcc_spec): Do not link with static libgcc.a if
	gcc invoked with -shared.
